# pile_sorting

./: -a  Cargo.toml  board.rs
.cargo/: config.toml
src/: bfs.rs  board.rs  board_queue.rs  board_rep.rs  config.rs  graph.rs  graph_queue_solver.rs  history_tracker.rs  lib.rs  main.rs  node_content.rs  node_holder.rs  program.rs  sortedness.rs  translator.rs  validator.rs  vector_util.rs
