[package]
name = "sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
indexmap = "2.4.0"
mimallocator =  "0.1.3" 
rand = "0.8.5"

[profile.release]
codegen-units = 1

[profile.dev]
opt-level = 3
codegen-units = 1
#panic = 'abort'
