[package]
name = "sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
mimallocator =  "0.1.3" 
petgraph = "0.6.5"
priority-queue = "2.1.1"
rand = "0.8.5"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
